--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>template</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>template</name>
+	<name>82262068</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -80,6 +80,23 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<!-- lib import용 repo 설정 -->
+	<repositories>
+		<repository>
+			<id>github</id>
+			<url>https://maven.pkg.github.com/hee-jun-zzang/82262068</url>
+		</repository>
+	</repositories>
+	
+	<!-- package publish용 repo 설정 -->
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub hee-jun-zzang/82262068 Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/hee-jun-zzang/82262068</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
