--- a/manifests/base/service.yaml
+++ b/manifests/base/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: "app-82262068"
+    name: app-82262068
 spec:
     ports:
     - port: 8080 
     selector:
-        app: "app-82262068"
+        app: "82262068"
