--- a/manifests/overlays/prod/deployment.yaml
+++ b/manifests/overlays/prod/deployment.yaml
@@ -16,14 +16,14 @@ spec:
             readOnly: false
             subPath: cloud-sample
           - mountPath: /config
-            name: application-properties
+            name: "82262068-properties"
             readOnly: true
                           
       volumes:
       - name: "82262068-volume"
         persistentVolumeClaim:
           claimName: ce-aa-pvc
-      - name: application-properties
+      - name: "82262068-properties"
         configMap:
           name: "82262068-configmap"
           items:
